--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -44,24 +44,37 @@
 }
 
 .image-box{
+    width: 100%;
+    min-height: 60vh;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    animation: scaleIn 1s ease;
 }
 
 .image-box img {
-    max-width: 320px;
-    border-radius: 12px;
     margin-top: 20px;
+    width: 280px;
+    max-width: 90%;
+    height: auto;
+    opacity: 0;
+    transform: scale(0.96);
+    animation: fadeIn 0.6s ease forwards;
+    border-radius: 12px;
+
 }
 
 .image-box small{
-    display: block;
+    margin-top: 12px;
+    font-size: 14px;
+    opacity: 0;
+    animation: fadeIn 0.6s ease forwards;
+    animation-delay: 0.2s;
+    /*display: block;
     margin-top: 8px;
     opacity: 0.7;
     font-size: 20px;
-    color: white;
+    color: white;*/
 }
 
 .bottom-button {
@@ -105,6 +118,7 @@ h1 {
 p {
     font-size: 1.2rem;
     opacity: 0.8;
+    text-align: center;
 }
 
 button {
